Fix desktop height cutoff being too harsh

--- a/src/App.css
+++ b/src/App.css
@@ -209,7 +209,7 @@
 
 .hiring-manager-view {
   width: 75vw;
-  height: 75vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   margin-top: 0.5rem;
